--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,28 +40,31 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-static-top" role="navigation" >
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">DroneFormgenerator</a>
+        <%= link_to "DroneFormgenerator", root_path, class: 'navbar-brand' %>
       </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
+      <div id="main-navbar-collapse" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
           <li class="<%= params[:action] == 'index' ? 'active' : '' %>"><%= link_to 'Home', root_path %></li>
           <li class="<%= params[:action] == 'about' ? 'active' : '' %>"><%= link_to 'About', about_path %></li>
-          <li><a href="#contact">Contact</a></li>
+          <li class="<%= params[:controller] == 'contacts' ? 'active': '' %>"><%= link_to "Contact", new_contact_path %></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
   </nav>
 
   <div class="container">
+    <% flash.each do |key, value| %>
+      <%= content_tag :div, value, class: 'alert alert-#{key}' %>
+    <% end %>
     <%= yield %>
   </div>
 
