Added user login

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,3 +3,8 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+.btn-primary:hover {
+  color: white;
+  background-color: #286090;
+  border-color: #204d74;
+}
