--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,15 @@
         </button>
         <%= link_to "DroneFormgenerator", root_path, class: 'navbar-brand' %>
       </div>
-      <div id="main-navbar-collapse" class="collapse navbar-collapse">
+      <div class="collapse navbar-collapse" id="main-nav-collapse">
+        <div class="nav navbar-nav navbar-right">
+          <% if user_signed_in? %>
+          <%= link_to "Ny Account", "#", class: 'btn btn-primary navbar-btn'%>
+          <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn' %>
+          <% else %>
+          <%= link_to "Log in", new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
+          <% end %>
+        </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="<%= params[:action] == 'index' ? 'active' : '' %>"><%= link_to 'Home', root_path %></li>
           <li class="<%= params[:action] == 'about' ? 'active' : '' %>"><%= link_to 'About', about_path %></li>
@@ -63,7 +71,7 @@
 
   <div class="container">
     <% flash.each do |key, value| %>
-      <%= content_tag :div, value, class: 'alert alert-#{key}' %>
+    <%= content_tag :div, value, class: 'alert alert-#{key}' %>
     <% end %>
     <%= yield %>
   </div>
