Added links to forms in index page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,43 @@
-<h1 class="index">index</h1>
+<div class="jumbotron text-center">
+  <h2>ようこそ<br>『ドローン飛行許可申請サポーター』へ</h2>
+  <h3>ドローンを飛ばす際に必要な飛行許可の申請用紙を、<br>ウェブサイト内で入力された情報を元にpdfとして生成します。</h3>
+  <h3>完全無料</h3>
+</div>
+<div class="row">
+  <div class="col-md-4 col-sm-4">
+    <div class="well">
+      <h2 class="text-center">
+        様式１
+      </h2>
+      <h3>
+        無人航空機の飛行に関する許可・承認申請書
+      </h3>
+      <br>
+      <%= link_to "入力フォーム１へ", new_user_type_format_path(user_id: current_user.id, type_id: 1), class: 'btn btn-default btn-lg btn-block' %>
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-4">
+    <div class="well">
+      <h2 class="text-center">
+        様式２
+      </h2>
+      <h3>
+        無人航空機の機能・性能に関する基準への適合確認書
+      </h3>
+      <br>
+      <%= link_to "入力フォーム２へ", new_user_type_format_path(user_id: current_user.id, type_id: 2), class: 'btn btn-default btn-lg btn-block' %>
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-4">
+    <div class="well">
+      <h2 class="text-center">
+        様式３
+      </h2>
+      <h3>
+        操縦技能確認書
+      </h3>
+      <br>
+      <%= link_to "入力フォーム３へ", new_user_type_format_path(user_id: current_user.id, type_id: 3), class: 'btn btn-default btn-lg btn-block' %>
+    </div>
+  </div>
+</div>
