--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
       <div class="collapse navbar-collapse" id="main-nav-collapse">
         <div class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-          <%= link_to "Ny Account", "#", class: 'btn btn-primary navbar-btn'%>
+<!--           <%= link_to "My Account", "#", class: 'btn btn-primary navbar-btn', method: :get %> -->
           <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn' %>
           <% else %>
           <%= link_to "Log in", new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
