--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,40 +4,61 @@
   <h3>完全無料</h3>
 </div>
 <div class="row">
-  <div class="col-md-4 col-sm-4">
-    <div class="well">
-      <h2 class="text-center">
-        様式１
-      </h2>
-      <h3>
-        無人航空機の飛行に関する許可・承認申請書
-      </h3>
-      <br>
-      <%= link_to "入力フォーム１へ", new_user_type_format_path(user_id: current_user.id, type_id: 1), class: 'btn btn-default btn-lg btn-block' %>
+  <% if user_signed_in? %>
+    <div class="col-md-4 col-sm-4">
+      <div class="well">
+        <h2 class="text-center">
+          様式１
+        </h2>
+        <h3>
+          無人航空機の飛行に関する許可・承認申請書
+        </h3>
+        <br>
+        <%= link_to "入力フォーム１へ", new_user_type_format_path(user_id: current_user.id, type_id: 1), class: 'btn btn-default btn-lg btn-block' %>
+      </div>
     </div>
-  </div>
-  <div class="col-md-4 col-sm-4">
-    <div class="well">
-      <h2 class="text-center">
-        様式２
-      </h2>
-      <h3>
-        無人航空機の機能・性能に関する基準への適合確認書
-      </h3>
-      <br>
-      <%= link_to "入力フォーム２へ", new_user_type_format_path(user_id: current_user.id, type_id: 2), class: 'btn btn-default btn-lg btn-block' %>
+    <div class="col-md-4 col-sm-4">
+      <div class="well">
+        <h2 class="text-center">
+          様式２
+        </h2>
+        <h3>
+          無人航空機の機能・性能に関する基準への適合確認書
+        </h3>
+        <br>
+        <%= link_to "入力フォーム２へ", new_user_type_format_path(user_id: current_user.id, type_id: 2), class: 'btn btn-default btn-lg btn-block' %>
+      </div>
     </div>
-  </div>
-  <div class="col-md-4 col-sm-4">
-    <div class="well">
-      <h2 class="text-center">
-        様式３
-      </h2>
-      <h3>
-        操縦技能確認書
-      </h3>
-      <br>
-      <%= link_to "入力フォーム３へ", new_user_type_format_path(user_id: current_user.id, type_id: 3), class: 'btn btn-default btn-lg btn-block' %>
+    <div class="col-md-4 col-sm-4">
+      <div class="well">
+        <h2 class="text-center">
+          様式３
+        </h2>
+        <h3>
+          操縦技能確認書
+        </h3>
+        <br>
+        <%= link_to "入力フォーム３へ", new_user_type_format_path(user_id: current_user.id, type_id: 3), class: 'btn btn-default btn-lg btn-block' %>
+      </div>
     </div>
-  </div>
+  <% else %>
+    <div class="col-md-6 col-sm-6">
+      <div class="well">
+        <h2 class="text-center">
+          ログイン
+        </h2>
+        <br>
+        <%= link_to "ログインページへ", new_user_session_path, class: 'btn btn-primary btn-lg btn-block' %>
+      </div>
+    </div>
+    <div class="col-md-6 col-sm-6">
+      <div class="well">
+        <h2 class="text-center">
+          ユーザー登録
+        </h2>
+        <br>
+        <%= link_to "ユーザー登録ページへ", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+      </div>
+    </div>
+  <% end %>
 </div>
