--- a/app/views/formformats/_form2.html.erb
+++ b/app/views/formformats/_form2.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @format, url: create_user_formats_path do |f| %>
+<%= form_for @formformat, url: create_user_formformats_path do |f| %>
 
   <%= hidden_field_tag 'type', params[:type] %>
 
