--- a/app/views/formformats/new.html.erb
+++ b/app/views/formformats/new.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-md-8 col-sm-8 col-md-offset-2">
     <div class="well">
-      <% if params[:type_id] == "1" %>
+      <% if params[:type] == "1" %>
         <%= render 'form1' %>
-      <% elsif params[:type_id] == "2" %>
+      <% elsif params[:type] == "2" %>
         <%= render 'form2' %>
       <% else %>
         <%= render 'form3' %>
